<resources>
    <string name="app_name">BigBoiBank$</string>
    <string name="admin">Admin</string>
    <string name="teller">Teller</string>
    <string name="customer">Customer</string>
    <string name="admin_terminal">Admin Terminal</string>
    <string name="teller_terminal">Teller Terminal</string>
    <string name="atm">Automated Teller Machine (ATM)</string>
    <string name="promptUserId">Input User ID</string>
    <string name="logIn">Log In</string>

    <string-array name="adminOptionsArray">
        <item>@string/customerOptions</item>
        <item>@string/messageOptions</item>
        <item>@string/staffOptions</item>
        <item>@string/bankOptions</item>
        <item>@string/databaseOptions</item>
    </string-array>

    <string-array name="tellerOptionsArray">
        <item>@string/customerOptions</item>
        <item>@string/messageOptions</item>
        <item>@string/staffOptions</item>
        <item>@string/bankOptions</item>
    </string-array>

    <string-array name="customerOptionsArray">
        <item>@string/customerOptions</item>
        <item>@string/messageOptions</item>
    </string-array>

    <string name="customerOptions">Current Customer Interactions</string>
    <string name="setCustomer">Set and authenticate a Customer</string>
    <string name="listAccounts">List customer accounts</string>
    <string name="makeAccount">Make a new account</string>
    <string name="giveInterest">Give interest</string>
    <string name="makeDeposit">Make a deposit</string>
    <string name="makeWithdrawal">Make a withdrawal</string>
    <string name="checkBalance">Check balance</string>
    <string name="transferFunds">Transfer Funds</string>
    <string name="updateName">Update name</string>
    <string name="updateAge">Update age</string>
    <string name="updateAddress">Update address</string>
    <string name="updatePassword">Update password</string>
    <string name="closeCustomer">Close the current customer session</string>
    <string name="makeTransaction">Make a new transaction</string>
    <string name="makeUser">Make a new user</string>

    <string name="messageOptions">Message Interactions</string>
    <string name="leaveMessage">Leave a message</string>
    <string name="customerMessages">View message ID\'s the customer can see</string>
    <string name="userMessages">View message ID\'s you can see</string>
    <string name="seeMessage">See a specific message</string>

    <string name="staffOptions">Staff and Customer Interactions</string>
    <string name="viewTellers">View Current Tellers</string>
    <string name="viewAdmins">View current admins</string>
    <string name="viewCustomers">View current customers</string>
    <string name="makeCustomer">Make a new customer</string>
    <string name="makeTeller">Make a new teller</string>
    <string name="makeAdmin">Make a new admin</string>
    <string name="promoteTeller">Promote a teller to admin</string>

    <string name="bankOptions">Bank Interactions</string>
    <string name="customerBalance">View total balance of all the accounts of a customer</string>
    <string name="bankBalance">View the total balance of the bank</string>
    <string name="updateInterest">Update account interest rate</string>
    <string name="verifyCheque">Verify Cheques</string>


    <string name="databaseOptions">Database Interactions</string>
    <string name="backup">Backup current database</string>
    <string name="load">Load saved database</string>

    <string name="promptName">Input Name</string>
    <string name="promptAge">Input Age</string>
    <string name="promptAddress">Input Address (100 Character Limit)</string>
    <string name="promptPassword">Input Password</string>
    <string name="promptConfirmPassword">Confirm Password</string>
    <string name="confirm">Confirm</string>

    <string name="promptAccountName">Input Account Name</string>
    <string name="promptBalance">Input balance</string>
    <string name="invalidBalance">Invalid Balance</string>
    <string name="accountAdded">Account successfully added. </string>
    <string name="accountNotAdded">Account was not successfully added.</string>
    <string name="tfsa">Tax Free Saving Account</string>
    <string name="chequing">Chequing Account</string>
    <string name="restrictedSaving">Restricted Savings Account</string>
    <string name="balanceOwing">Balance Owing Account</string>
    <string name="savings">Savings Account</string>

    <string name="accountId">Account ID: </string>
    <string name="accountName">Account Name: </string>
    <string name="accountBalance">Account Balance: </string>
    <string name="accountType">Account Type: </string>
    <string name="noAccounts">Customer has no accounts</string>

    <string name="promptAccountId">Input Account ID</string>
    <string name="promptAmount">Input Amount</string>

    <string name="invalidAge">Invalid Age. </string>
    <string name="invalidId">Invalid ID. </string>
    <string name="invalidName">Invalid Name. </string>
    <string name="invalidAmount">Invalid Amount. </string>
    <string name="transactionCompleted">Transaction successful! New balance: $</string>
    <string name="transactionFailed">Transaction was not successful. </string>

    <string name="interestAdded">Interest Added! New balance: $</string>
    <string name="interestNotAdded">Interest was not added successfully. </string>
    <string name="balance">Account Balance is: $</string>
    <string name="check">Check</string>

    <string name="update">Update</string>
    <string name="nameUpdated">Name successfully updated. </string>
    <string name="addressUpdated">Address successfully updated. </string>
    <string name="ageUpdated">Age successfully updated. </string>
    <string name="passwordUpdated">Password successfully updated. </string>

    <string name="customerSet">Customer has been set and authenticated. </string>
    <string name="incorrectPassword">Incorrect Password .</string>

    <string name="invalidAddress">Address is too long. </string>
    <string name="passwordNoMatch">Passwords do not match. </string>
    <string name="userAdded">User successfully added with ID: </string>
    <string name="userNotAdded">User was not successfully created. </string>
    <string name="back">Exit</string>

    <string name="transfer">Transfer</string>
    <string name="insufficientFunds">Insufficient Funds. </string>
    <string name="transferCompleted">Transfer successfully completed. </string>
    <string name="transferFailed">Transfer was not successfully completed. </string>

    <string name="depositChequeChoice">Would you like to deposit a cheque?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="promptTransferFromId">Input Account ID to transfer from</string>
    <string name="promptTransferToId">Input Account ID to transfer to</string>

    <string name="closeCustomerSession">Current Customer Session Closed</string>

    <string name="setCustomerFirst">Set and authenticate a customer first!</string>

    <string name="userName">User Name: </string>
    <string name="userAge">User Age: </string>
    <string name="userAddress">User Address: </string>
    <string name="userID">User ID: </string>
    <string name="noCurrentUser">There are no current users of type. </string>
    <string name="listOfUsers">Current List of Users</string>

    <string name="databaseBackedUp">Database has been successfully backed up. </string>
    <string name="databaseBackUpFailed">Database has not been successfully backed up. </string>

    <string name="databaseLoaded">Saved database has been successfully loaded. </string>
    <string name="databaseNotLoaded">Database was not successfully not loaded. </string>

    <string name="totalBalance">The total balance of this customer is: $</string>
    <string name="totalBankBalance">Total Bank Balance is: $</string>
    <string name="seeSpecificMessage">See specific message</string>
    <string name="inputMessageId">Input message id</string>
    <string name="idPrefix">id: </string>
    <string name="noAccess">You do not have access to the message</string>
    <string name="promptUserIdForMessage">User ID to send message to</string>
    <string name="promptMessage">Message to send (512 Character limit)</string>

    <string name="noCheques">There are no Cheques</string>
    <string name="cheque">Cheque</string>
    <string name="verify">Verify</string>
    <string name="decline">Decline</string>
    <string name="chequeVerified">Cheque has been verified and deposited. </string>
    <string name="chequeChecked">Cheque has already been checked</string>
    <string name="chequeStatusChecked">Checked</string>
    <string name="chequeStatusUnchecked">Not yet checked</string>

    <string name="promptTellerId">Input Teller ID</string>
    <string name="tellerPromoted">Teller Successfully promoted to an admin. </string>
    <string name="tellerNotPromoted">Teller was not successfully promoted. </string>

    <string name="notCustomer">ID does not belong to a customer. </string>
    <string name="notTeller">ID does not belong to a teller. </string>
    <string name="notAdmin">ID does not belong to an admin. </string>

    <string name="messageLeft">Successfully left a message with ID: </string>
    <string name="cantLeaveMessage">You can not a leave a message for this user. </string>
    <string name="noAccountAccess">You do not have access to this account. </string>

    <string name="noMessages">No message ID\'s available to see</string>
    
    <string name="promptAccountInterest">Input Account Interest (Between 0.0 and 1.0) </string>
    <string name="interestUpdated">Interest successfully updated</string>
    <string name="interestNotUpdated">Interest was not successfully updated</string>

    <string name="customerInfo">Customer Information</string>
    <string name="messageIds">Message Ids</string>
    <string name="wrongTerminal">UH-OH SOMETHING WENT WRONG, THAT\'S THE WRONG TERMINAL!</string>
    <string name="chequeImage">Image of cheque</string>

    <string name="withdrawWithWorker">Please see a worker to withdraw from this account. </string>

</resources>
