<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/makeAccount"
    android:background="@drawable/round_dialog"
    android:paddingBottom="@dimen/dialog_bottom_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:background="@color/colorPrimary"
        android:text="@string/makeAccount"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_title"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:id="@+id/accountName"
        android:hint="@string/promptAccountName"
        android:textSize="@dimen/dialog_title"/>

    <EditText
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/promptBalance"
        android:inputType="numberDecimal"
        android:layout_below="@+id/accountName"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accounts"
        android:orientation="vertical"
        android:layout_below="@+id/balance"
        android:layout_marginBottom="@dimen/button_margin_bottom">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tfsa"
            android:id="@+id/tfsa"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chequing"
            android:text="@string/chequing"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/savings"
            android:text="@string/savings"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restrictedSavings"
            android:text="@string/restrictedSaving"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balanceOwing"
            android:text="@string/balanceOwing" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/confirm"
        android:layout_below="@+id/confirmationMessage"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmationMessage"
        android:layout_below="@id/accounts"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>
</RelativeLayout>