<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    tools:context="com.bigboibanks.LogIn"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputId"
        android:hint="@string/promptUserId"
        android:textColorHint="@color/white"
        android:layout_below="@+id/title"
        android:textColor="@color/white"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputPassword"
        android:hint="@string/promptPassword"
        android:textColorHint="@color/white"
        android:layout_below="@+id/inputId"
        android:textColor="@color/white"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/userChoice"
        android:layout_below="@+id/inputPassword"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin"
            android:text="@string/admin"
            android:textColor="@color/white"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teller"
            android:textColor="@color/white"
            android:text="@string/teller"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customer"
            android:textColor="@color/white"
            android:text="@string/customer"/>
    </RadioGroup>

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userChoice"
        android:layout_centerHorizontal="true"
        android:text="@string/logIn"/>

</RelativeLayout>
