<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@drawable/round_dialog"
    android:paddingBottom="@dimen/dialog_bottom_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/transferFunds"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_title"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transferFrom"
        android:inputType="number"
        android:layout_below="@+id/title"
        android:hint="@string/promptTransferFromId"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transferTo"
        android:inputType="number"
        android:layout_below="@+id/transferFrom"
        android:hint="@string/promptTransferToId"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        android:inputType="numberDecimal"
        android:layout_below="@+id/transferTo"
        android:hint="@string/promptAmount"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transfer"
        android:text="@string/transfer"
        android:layout_below="@id/confirmationMessage"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/confirmationMessage"
        android:textAlignment="center"
        android:layout_below="@id/amount"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>

</RelativeLayout>